compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_custom_type_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1271
expression: "record Boxed_value { Box(Int) }"
---
----- SOURCE CODE
record Boxed_value { Box(Int) }

----- ERROR
error: Invalid type name
  ┌─ /src/one/two.rakun:1:8
  │
1 │ record Boxed_value { Box(Int) }
  │        ^^^^^^^^^^^ This is not a valid type name

Hint: Type names start with an uppercase letter and contain only lowercase
letters, numbers, and uppercase letters.
Try: BoxedValue
