compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_parameter_discard_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1236
expression: "fn ignore(_ignoreMe: Bool) { 98 }"
---
----- SOURCE CODE
fn ignore(_ignoreMe: Bool) { 98 }

----- ERROR
error: Invalid discard name
  ┌─ /src/one/two.rakun:1:11
  │
1 │ fn ignore(_ignoreMe: Bool) { 98 }
  │           ^^^^^^^^^ This is not a valid discard name

Hint: Discard names start with _ and contain a-z, 0-9, or _.
Try: _ignore_me
