compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_parameter_label2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn ignore(thisIsALabel _ignore: Int) { 25 }"
---
error: Invalid label name
  ┌─ /src/one/two.rakun:1:11
  │
1 │ fn ignore(thisIsALabel _ignore: Int) { 25 }
  │           ^^^^^^^^^^^^ This is not a valid label name

Hint: Label names start with a lowercase letter and contain a-z, 0-9, or _.
Try: this_is_a_label
