compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__invalid_parameter_name2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1226
expression: "fn pass(label paramName: Bool) { paramName }"
---
----- SOURCE CODE
fn pass(label paramName: Bool) { paramName }

----- ERROR
error: Invalid argument name
  ┌─ /src/one/two.rakun:1:15
  │
1 │ fn pass(label paramName: Bool) { paramName }
  │               ^^^^^^^^^ This is not a valid argument name

Hint: Argument names start with a lowercase letter and contain a-z, 0-9,
or _.
Try: param_name
